--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/oficina?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=m0ur4z3r0
+spring.datasource.password=******
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create   
